force-app/main/default/objects/Change_Request_Related_Projection__c/Change_Request_Related_Projection__c.object-meta.xml
<CustomObject>
    <label>Change Request Related Projection</label>
    <nameField>
        <displayFormat>CRP-{00000000}</displayFormat>
        <label>Change Request Related Profit Projection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Request Related Projections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>