force-app/main/default/objects/Change_Request_Related_Projection__c/fields/Notes_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Notes_Assumptions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes &amp; Assumptions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>