force-app/main/default/objects/Change_Request_Related_Projection__c/fields/Projected_Profit__c.field-meta.xml
<CustomField>
    <fullName>Projected_Profit__c</fullName>
    <formula>Revenue_Projection__c * Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>