force-app/main/default/objects/Change_Request_Related_Projection__c/fields/Projection_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Projection_Period_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Projection Period End</label>
    <type>Date</type>
</CustomField>