force-app/main/default/objects/Change_Request_Related_Projection__c/fields/Revenue_Projection__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Projection__c</fullName>
    <label>Revenue Projection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>